--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,109 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+/* Font Imports */
+@font-face {
+  font-family: 'Nt wagner';
+  src: url('./assets/font/ntwagner/nt_wagner_only_personal_use-webfont.woff2')
+      format('woff2'),
+    url('./assets/font/ntwagner/nt_wagner_only_personal_use-webfont.woff')
+      format('woff');
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  @apply bg-[#ffd5c2];
+}
+
+input:focus ~ span,
+input:not(:placeholder-shown) ~ span {
+  @apply transform -translate-y-6 text-lg lg:text-xl;
+}
+
+textarea:focus ~ span,
+textarea:not(:placeholder-shown) ~ span {
+  @apply transform -translate-y-8 text-lg lg:text-xl;
+}
+
+/* Text */
+
+.nav-title {
+  font-size: clamp(1.3rem, 5vw, 2.3rem);
+  line-height: 1;
+}
+
+.header-primary {
+  font-size: clamp(2rem, 6vw, 9rem);
+  line-height: 1;
+}
+
+.header-secondary {
+  font-size: clamp(3rem, 9vw, 10rem);
+  line-height: 1;
+}
+
+.large-text {
+  font-size: clamp(1.5rem, 4vw, 4.5rem);
+  line-height: 1;
+}
+
+.footer-header {
+  font-size: clamp(2.5rem, 6vw, 6rem);
+  line-height: 1;
+}
+
+/* Scrollbar & Cursor */
+.hideCursor {
+  cursor: none;
+}
+
+.hidescrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hidescrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: white;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: black;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+/* For Firefox */
+::-moz-scrollbar {
+  width: 10px;
+}
+
+::-moz-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+::-moz-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 5px;
+}
+
+::-moz-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+/* Fonts  */
+
+.wagner {
+  font-family: 'Nt wagner', Frank Ruhl Libre, sans-serif;
+  @apply font-bold;
 }
