--- a/app/globals.css
+++ b/app/globals.css
@@ -53,6 +53,13 @@ textarea:not(:placeholder-shown) ~ span {
 }
 
 /* Scrollbar & Cursor */
+html {
+  scrollbar-width: none; /* Firefox */
+}
+::-webkit-scrollbar {
+  width: 0px;
+}
+
 .hideCursor {
   cursor: none;
 }
@@ -62,44 +69,12 @@ textarea:not(:placeholder-shown) ~ span {
   scrollbar-width: none; /* Firefox */
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
 .hidescrollbar::-webkit-scrollbar {
-  display: none;
+  width: 0px;
 }
 
-::-webkit-scrollbar {
-  width: 8px;
-}
-
-::-webkit-scrollbar-track {
-  background-color: white;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: black;
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: #555;
-}
-
-/* For Firefox */
-::-moz-scrollbar {
-  width: 10px;
-}
-
-::-moz-scrollbar-track {
-  background-color: #f1f1f1;
-}
-
-::-moz-scrollbar-thumb {
-  background-color: #888;
-  border-radius: 5px;
-}
-
-::-moz-scrollbar-thumb:hover {
-  background-color: #555;
+.hidescrollbar::-moz-scrollbar {
+  width: 0px;
 }
 
 /* Fonts  */
