--- a/app/globals.css
+++ b/app/globals.css
@@ -84,31 +84,6 @@ html {
   @apply font-bold;
 }
 
-/* media queiry for landscape mode on mobile */
-
-@media only screen and (max-width: 900px) and (orientation: landscape) {
-  .navigation {
-    padding-top: 5rem;
-  }
-  .nav-title {
-    font-size: 1.3rem;
-    line-height: 1;
-  }
-  .header-primary {
-    font-size: clamp(1rem, 4vw, 3rem);
-  }
-
-  .cone {
-    width: 100%;
-    height: 100%;
-    top: 65%;
-  }
-
-  .cone-bg {
-    min-width: 20%;
-  }
-}
-
 /* React-select */
 
 .css-24pjkf-placeholder {
@@ -133,4 +108,48 @@ html {
 
 .css-tj5bde-Svg {
   @apply text-white;
+}
+
+/* media queiry for landscape mode on mobile */
+
+@media only screen and (max-width: 900px) and (orientation: landscape) {
+  .navigation {
+    padding-top: 5rem;
+  }
+  .nav-title {
+    font-size: 1.3rem;
+    line-height: 1;
+  }
+  .header-primary {
+    font-size: clamp(1rem, 4vw, 3rem);
+  }
+
+  .cta {
+    @apply mt-[5vh];
+  }
+
+  .half-circle {
+    @apply w-1/2;
+  }
+  .cone {
+    width: 100%;
+    height: 100%;
+    top: 65%;
+  }
+
+  .cone-bg {
+    min-width: 20%;
+  }
+}
+
+/* Media query for Iphone 5 */
+
+@media only screen and (max-width: 320px) {
+  .header-primary {
+    @apply text-2xl;
+  }
+
+  .half-circle {
+    @apply h-40;
+  }
 }
