- Implement and finished cart system
-Implement stripe checkout

-Implemented toaster library

-Fixed a bunch of imports across app

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,12 +17,12 @@ body {
 
 input:focus ~ span,
 input:not(:placeholder-shown) ~ span {
-  @apply transform -translate-y-6 text-lg lg:text-xl;
+  @apply transform -translate-y-6;
 }
 
 textarea:focus ~ span,
 textarea:not(:placeholder-shown) ~ span {
-  @apply transform -translate-y-8 text-lg lg:text-xl;
+  @apply transform -translate-y-8;
 }
 
 /* Text */
